# arrow-webtransport

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  biome.json  docker-compose.yml  justfile
bench/: entrypoint.sh
client/: vite.config.ts
client/src/: style.css  transport.ts
client/src/__tests__/: transport.test.ts
data/nyc_yellow_taxi_dataset/: README.md
docs/: experiment-runner.md  project-tracker.md  thesis-one-pager.md  thesis-research.md
docs/observations/: 2026-02-20-http2-arrow-faster-throughput.md  2026-03-28-webtransport-excels-under-lossy-network.md  http2-arrow-faster-throughput.md
http2-fetch/client/: package-lock.json  package.json
http2-fetch/client/src/: main.ts
http2-fetch/server/: Cargo.toml
http2-fetch/server/src/: main.rs
server-core/: Cargo.toml
server-core/src/: certs.rs  lib.rs  query.rs
servers/http2-arrow/: Cargo.toml
servers/http2-arrow/src/: main.rs
servers/http2-json/: Cargo.toml
servers/http2-json/src/: main.rs
servers/webtransport/: Cargo.toml
servers/webtransport/src/: certs.rs  main.rs  session.rs
src/client/: index.html  package-lock.json  package.json  vite.config.ts
src/client/benchmarks/: minimal.example.json  taxi-scaling.example.json
src/server-core/: Cargo.toml
src/server-core/src/: certs.rs  encode.rs  lib.rs  query.rs
src/servers/webtransport/: Cargo.toml
src/servers/webtransport/src/: certs.rs  session.rs
webtransport/client/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
webtransport/server/: Cargo.toml
(+42 files in other folders)
