[package]
name = "server-webtransport"
version = "0.1.0"
edition = "2024"

[dependencies]
server-core = { path = "../../server-core" }
wtransport = { version = "0.7", features = ["quinn"] }
quinn = { version = "0.11", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
serde_json = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
